# interactive-presenter

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  dev.sh  docker-compose.yml  pyproject.toml
backend/: __init__.py  main.py  models.py  parser.py  routes.py
backend/ws/: __init__.py  connection_manager.py  handlers.py  models.py  poll_manager.py  rate_limiter.py
blog/: episode_01.org  episode_02.org  episode_03.org  episode_04.org  episode_05.org  episode_06.org
deploy/nginx/: default.conf.template  init.conf.template  snippet.conf
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AudienceView.tsx  EmojiReactionBar.tsx  PollCard.tsx  PollModal.tsx  PollOverlay.tsx  PresentationList.tsx  QRCodeOverlay.tsx  QuestionModal.tsx  ReactionModal.tsx  ReactionOverlay.tsx  SlideViewer.tsx
frontend/src/hooks/: usePolls.ts  useQuestions.ts  useReactions.ts  useWebSocket.ts
presentations/: bugs.md  demo.md  gastown.md
spec/: emoji_reactions.md  mission_statement.md  polls.md  qa.md  qr_code.md  slide_viewer.md  tech_stack.md  websocket_infrastructure.md
tests/: __init__.py  test_parser.py  test_polls.py  test_qa.py  test_reactions.py  test_routes.py  test_ws.py
